feat: add booking generation

--- a/package.json
+++ b/package.json
@@ -22,16 +22,22 @@
   "dependencies": {
     "@nestjs/apollo": "^10.1.7",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^10.1.7",
+    "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
     "@types/apollo-upload-client": "^17.0.2",
     "@types/graphql-upload": "^15.0.2",
     "apollo-server-core": "^3.11.1",
     "apollo-server-express": "^3.11.1",
     "apollo-upload-client": "^17.0.0",
+    "dayjs": "^1.11.7",
     "fs-capacitor": "6.2.0",
+    "mongodb": "^4.13.0",
+    "mongoose": "^6.8.3",
     "object-path": "^0.11.8",
+    "prisma": "^4.8.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
