--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@
 
 DATABASE_URL="mongodb+srv://admin:gpPHn4BEjdHyG91w@cluster0.bo29m4x.mongodb.net/"
 DATABASE_NAME="pulse_dev"
+DATABASE_FULL_URL="mongodb+srv://admin:gpPHn4BEjdHyG91w@cluster0.bo29m4x.mongodb.net/pulse_dev"
