--- a/package.json
+++ b/package.json
@@ -17,7 +17,17 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migrate:dev": "prisma migrate dev --preview-feature",
+    "migrate:dev:create": "prisma migrate dev --create-only --preview-feature",
+    "migrate:reset": "prisma migrate reset --preview-feature",
+    "migrate:deploy": "npx prisma migrate deploy --preview-feature",
+    "migrate:status": "npx prisma migrate status --preview-feature",
+    "migrate:resolve": "npx prisma migrate resolve --preview-feature",
+    "prisma:studio": "npx prisma studio",
+    "prisma:generate": "npx prisma generate",
+    "prisma:generate:watch": "npx prisma generate --watch",
+    "seed": "prisma db seed"
   },
   "dependencies": {
     "@nestjs/apollo": "^10.1.7",
@@ -27,15 +37,20 @@
     "@nestjs/graphql": "^10.1.7",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
+    "@prisma/client": "4.8.1",
     "@types/apollo-upload-client": "^17.0.2",
     "@types/graphql-upload": "^15.0.2",
     "apollo-server-core": "^3.11.1",
     "apollo-server-express": "^3.11.1",
     "apollo-upload-client": "^17.0.0",
+    "class-transformer": "^0.5.1",
     "dayjs": "^1.11.7",
     "fs-capacitor": "6.2.0",
+    "graphql": "^16.6.0",
+    "graphql-type-json": "^0.3.2",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
+    "nestjs-prisma": "^0.20.0",
     "object-path": "^0.11.8",
     "prisma": "^4.8.1",
     "reflect-metadata": "^0.1.13",
@@ -56,6 +71,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.3.1",
     "prettier": "^2.3.2",
+    "prisma-dbml-generator": "^0.10.0",
+    "prisma-nestjs-graphql": "^17.1.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
