--- a/.env
+++ b/.env
@@ -1,9 +1,21 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+# POSTGRES
+POSTGRES_USER=prisma
+POSTGRES_PASSWORD=topsecret
+POSTGRES_DB=blog
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+# Nest run locally
+DB_HOST=localhost
+# Nest run in docker, change host to database container name
+# DB_HOST=postgres
+DB_PORT=5432
+DB_SCHEMA=blog
 
-DATABASE_URL="mongodb+srv://admin:gpPHn4BEjdHyG91w@cluster0.bo29m4x.mongodb.net/"
-DATABASE_NAME="pulse_dev"
-DATABASE_FULL_URL="mongodb+srv://admin:gpPHn4BEjdHyG91w@cluster0.bo29m4x.mongodb.net/pulse_dev"
+# Prisma database connection
+# DATABASE_URL=postgresql://postgres:j0Y1x574yD2c5P51RA4k@containers-us-west-131.railway.app:6165/railway
+DATABASE_URL=postgresql://postgres:rPRO4MoO4iYOwDqwBQC2@containers-us-west-143.railway.app:5505/railway
+# Nest
+PORT=3000
+
+# Security
+JWT_ACCESS_SECRET=nestjsPrismaAccessSecret
+JWT_REFRESH_SECRET=nestjsPrismaRefreshSecret
