--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@
 DATABASE_URL="mongodb+srv://admin:gpPHn4BEjdHyG91w@cluster0.bo29m4x.mongodb.net/"
 DATABASE_NAME="pulse_dev"
 DATABASE_FULL_URL="mongodb+srv://admin:gpPHn4BEjdHyG91w@cluster0.bo29m4x.mongodb.net/pulse_dev"
+PORT="3000"
+SECURITY_EXPIRE="2d"
+SECURITY_REFRESH="30d"
+bcryptSaltOrRound="10"
