--- a/package.json
+++ b/package.json
@@ -27,15 +27,19 @@
     "prisma:studio": "npx prisma studio",
     "prisma:generate": "npx prisma generate",
     "prisma:generate:watch": "npx prisma generate --watch",
-    "seed": "prisma db seed"
+    "seed": "prisma db seed",
+    "postinstall": "npm run prisma:generate"
   },
   "dependencies": {
     "@nestjs/apollo": "^10.1.7",
+    "@nestjs/axios": "^1.0.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^10.1.7",
+    "@nestjs/jwt": "^10.0.1",
     "@nestjs/mongoose": "^9.2.1",
+    "@nestjs/passport": "^9.0.1",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "4.8.1",
     "@types/apollo-upload-client": "^17.0.2",
@@ -43,15 +47,21 @@
     "apollo-server-core": "^3.11.1",
     "apollo-server-express": "^3.11.1",
     "apollo-upload-client": "^17.0.0",
+    "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "dayjs": "^1.11.7",
     "fs-capacitor": "6.2.0",
     "graphql": "^16.6.0",
+    "graphql-scalars": "^1.20.1",
     "graphql-type-json": "^0.3.2",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
     "nestjs-prisma": "^0.20.0",
     "object-path": "^0.11.8",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "prisma": "^4.8.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
@@ -63,6 +73,8 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
