feat: add phone number verification

--- a/.env
+++ b/.env
@@ -11,3 +11,6 @@ PORT="3000"
 SECURITY_EXPIRE="2d"
 SECURITY_REFRESH="30d"
 bcryptSaltOrRound="10"
+
+JWT_ACCESS_SECRET="nestjsPrismaAccessSecret"
+JWT_REFRESH_SECRET="nestjsPrismaRefreshSecret"
