--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "apollo-server-express": "^3.11.1",
     "apollo-upload-client": "^17.0.0",
     "bcrypt": "^5.1.0",
+    "cache-manager": "^5.1.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dayjs": "^1.11.7",
