--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
 		"cache-manager": "^5.1.4",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.0",
-		"client_car": "./client_car",
 		"dayjs": "^1.11.7",
 		"fs-capacitor": "6.2.0",
 		"graphql": "^16.6.0",
@@ -66,9 +65,7 @@
 		"passport-local": "^1.0.0",
 		"prisma": "^4.8.1",
 		"reflect-metadata": "^0.1.13",
-		"rxjs": "^7.2.0",
-		"zod": "^3.20.6",
-		"zod-prisma": "^0.5.4"
+		"rxjs": "^7.2.0"
 	},
 	"devDependencies": {
 		"@nestjs/cli": "^9.0.0",
