cal com integration

--- a/.env
+++ b/.env
@@ -4,7 +4,9 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://admin:gpPHn4BEjdHyG91w@cluster0.bo29m4x.mongodb.net/"
+# DATABASE_URL="mongodb+srv://admin:gpPHn4BEjdHyG91w@cluster0.bo29m4x.mongodb.net/"
+# DATABASE_URL="postgresql://postgres:rPRO4MoO4iYOwDqwBQC2@containers-us-west-143.railway.app:5505/railway"
+DATABASE_URL="postgresql://postgres:IznVAa7p5JzfTbkhRYbT@containers-us-west-150.railway.app:6987/railway"
 DATABASE_NAME="pulse_dev"
 DATABASE_FULL_URL="mongodb+srv://admin:gpPHn4BEjdHyG91w@cluster0.bo29m4x.mongodb.net/pulse_dev"
 PORT="3001"
