--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-DATABASE_URL="postgresql://postgres:rPRO4MoO4iYOwDqwBQC2@containers-us-west-143.railway.app:5505/railway"
+DATABASE_URL="postgresql://postgres:z8zb8jKadEACdzARhmsP@containers-us-west-165.railway.app:6983/railway"
 DATABASE_URL_MONGO="mongodb+srv://admin:gpPHn4BEjdHyG91w@cluster0.bo29m4x.mongodb.net/"
 DATABASE_NAME="pulse_dev"
 DATABASE_FULL_URL="mongodb+srv://admin:gpPHn4BEjdHyG91w@cluster0.bo29m4x.mongodb.net/pulse_dev"
